2008-04-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* TODO,
	autogen.sh: Add a TODO item.

2008-02-11	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* data/Makefile.am: Fix the bug lack of radio-on.png and radio-off.png at
	tags 0.1.2

2008-02-08	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* configure.ac: Bump to 0.1.2

2008-02-08	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/betaradio.c: Adjust the source code of GTK+.

2008-01-21	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* TODO: Add this to record some ideas.
	
2008-01-21	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* autogen.sh: Add this for its convenience.

2008-01-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/betaradio.c: Add the missing trailer 'NULL' of g_build_filename.

2008-01-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/Makefile.am
	src/betaradio.c
	data/betaradio.desktop.in
	data/betaradio-on.png
	data/Makefile.am
	data/radio-off.png
	data/radio-on.png: Modify the tray icon's size and location on disk.

2008-01-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* configure.ac,
	data/Makefile.am,
	src/betaradio.c: Add new tray icon and make it flash when working.

2007-12-10	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/sitelist.h: Modify site name.
	* data/betaradio-on.png,
	data/betaradio.png: Update new icons.

2007-11-28	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/sitelist.h: Update site list.

2007-11-15	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/channel.c: Add error check to prevent program's crash.

2007-11-11	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/gstplay.c,
	src/channel.c,
	src/betaradio.c: Add error check, and polish source code.

2007-11-08	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/sitelist.h,
	src/channel.c,
	src/betaradio.c,
	src/channel.h: Add live channel.
