@@ -8,6 +8,7 @@ static char *music_site_list[] =
 	"BestRadio 台北好事989", "212",
 	"BestRadio 花蓮好事935", "303",
 	"BestRadio 高雄港都983", "213",
+	"Flyradio 飛揚調頻895", "357",
 	"HitFm 聯播網 台中91.5", "88",
 	"HitFm 聯播網 高雄90.1", "90",
 	"HitFm 聯播網 台北91.7", "87",
@@ -19,92 +20,96 @@ static char *music_site_list[] =
 	"中廣古典網", "162",
 	"中廣流行網", "205",
 	"中廣音樂網 i radio", "206",
+	"佳音CCM", "304",
+	"全國廣播音樂網", "338",
 	"台北之音經典音樂台", "222",
 	"台北愛樂", "228",
 	"台灣之音-音樂", "313",
 	"太陽電台", "289",
 	"奇美古典音樂網", "294",
-    "寶島新聲廣播電台", "259",
+	"寶島新聲廣播電台", "259",
 	NULL
 };
 
 static char *life_site_list[] =
 {
 	"ASIA FM92.3 亞太電台", "295",
-    "ASIA FM92.7 亞州電台", "210",
-    "GOLD FM-台中城市廣播", "226",
-    "GOLD FM-台北健康電台", "229",
-    "IC之音", "148",
-    "佳音廣播電台", "201",
-    "佳音電台2台", "250",
-    "全國廣播", "202",
-    "全國廣播音樂網", "338",
-    "台中廣播", "230",
-    "台北廣播電台- 都會資訊頻道", "208",
-    "台北廣播電台喔海洋頻道", "238",
-    "台視數位廣播", "319",
-    "大千電台", "109",
-    "大愛網路電台", "325",
-    "宜蘭中山電台", "301",
-    "環宇廣播", "282",
-    "蒲公英聖樂網", "337",
-    "警廣長青網", "271",
-    "飛碟電台", "232",
+	"ASIA FM92.7 亞州電台", "210",
+	"GOLD FM-台中城市廣播", "226",
+	"GOLD FM-台北健康電台", "229",
+	"IC之音", "148",
+	"佳音廣播電台", "201",
+	"佳音電台2台", "250",
+	"全國廣播", "202",
+	"台中廣播", "230",
+	"台北廣播電台- 都會資訊頻道", "208",
+	"台北廣播電台喔海洋頻道", "238",
+	"台視數位廣播", "319",
+	"大千電台", "109",
+	"大愛網路電台", "325",
+	"宜蘭中山電台", "301",
+	"環宇廣播", "282",
+	"真心之音廣播電台", "217",
+	"蒲公英聖樂網", "337",
+	"警廣長青網", "271",
+	"青春線上", "356",
+	"飛碟電台", "232",
 	NULL
 };
 
 static char *news_site_list[] =
 {
-    "NEWS98新聞網", "187",
-    "中廣新聞網", "207",
+	"NEWS98新聞網", "187",
+	"中廣新聞網", "207",
 	NULL
 };
 
 static char *others_site_list[] =
 {
-    "台灣之音-華語", "315",
-    "復興廣播電台 短波網", "288",
-    "復興廣播電台 第一網", "286",
-    "復興廣播電台 第二網", "287",
-    "正聲台北調幅台", "317",
-    "正聲台北調頻台", "198",
-    "漢聲光華網-中波", "281",
-    "漢聲光華網-短波", "309",
-    "漢聲廣播電台", "215",
-    "漢聲廣播電台全國調頻網", "216",
-    "綠色和平台灣文化廣播電台", "327",
+	"台灣之音-華語", "315",
+	"復興廣播電台 短波網", "288",
+	"復興廣播電台 第一網", "286",
+	"復興廣播電台 第二網", "287",
+	"正聲台北調幅台", "317",
+	"正聲台北調頻台", "198",
+	"漢聲光華網-中波", "281",
+	"漢聲光華網-短波", "309",
+	"漢聲廣播電台", "215",
+	"漢聲廣播電台全國調頻網", "216",
+	"綠色和平台灣文化廣播電台", "327",
 	NULL
 };
 
 static char *foreign_site_list[] =
 {
-    "ICRT", "177",
-    "台灣之音-FM", "312",
-    "台灣之音-亞洲", "311",
-    "台灣之音-歐美及方言", "314",
+	"ICRT", "177",
+	"台灣之音-FM", "312",
+	"台灣之音-亞洲", "311",
+	"台灣之音-歐美及方言", "314",
 	NULL
 };
 
 static char *culture_site_list[] =
 {
-    "中廣客家頻道", "160",
-    "大漢之音", "300",
-    "寶島客家", "241",
-    "新客家廣播電台", "254",
-    "高屏溪客家電台", "298",
+	"中廣客家頻道", "160",
+	"大漢之音", "300",
+	"寶島客家", "241",
+	"新客家廣播電台", "254",
+	"高屏溪客家電台", "298",
 	NULL
 };
 
 static char *traffic_site_list[] =
 {
-    "警廣全國交通網", "269",
-    "警廣台中台", "260",
-    "警廣台北台", "261",
-    "警廣台南台", "263",
-    "警廣宜蘭台", "265",
-    "警廣新竹台", "268",
-    "警廣花蓮台", "266",
-    "警廣高雄台", "267",
+	"警廣—交通網台東台", "358",
+	"警廣全國交通網", "269",
+	"警廣台中台", "260",
+	"警廣台北台", "261",
+	"警廣台南台", "263",
+	"警廣宜蘭台", "265",
+	"警廣新竹台", "268",
+	"警廣花蓮台", "266",
+	"警廣高雄台", "267",
 	NULL
 };
 
