@@ -1,3 +1,7 @@
+2008-05-01	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/sitelist.h: Update radio site list.
+
 2008-04-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* TODO,
